--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,10 +4,10 @@ repos:
   hooks:
   - id: end-of-file-fixer
   - id: trailing-whitespace
-- repo: https://github.com/pre-commit/mirrors-autopep8
-  rev: v1.7.0
+- repo: https://github.com/psf/black
+  rev: 22.6.0
   hooks:
-  - id: autopep8
+  - id: black
 - repo: https://github.com/PyCQA/flake8
   rev: 5.0.4
   hooks:
